# music-cluster

./: .gitignore  AUDIO_PLAYER_IMPROVEMENTS.md  BUG_HUNT_2.md  CODE_REVIEW.md  CODE_REVIEW_2026.md  DATA_FLOW_REVIEW.md  EXAMPLES.md  FORMATS.md  IMPLEMENTATION_NOTES.md  INSTALL.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  README.md  SPEC.md  TEST_RESULTS.md  UI_QUICKSTART.md  UI_RECOMMENDATIONS.md  UI_REVIEW.md  pytest.ini  requirements.txt  setup.py  start-dev.py  start-dev.sh  test_imports.py
music_cluster/: __init__.py  api.py  api_example.py  classifier.py  cli.py  cli_helpers.py  cluster_namer.py  clustering.py  config.py  database.py  exporter.py  extractor.py  features.py  genre_classifier.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs
tests/: __init__.py  conftest.py  test_cli_parallel.py
tests/integration/: __init__.py
tests/unit/: test_cli_helpers.py  test_genre_classifier.py
ui/: README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.js
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/analyze/: +page.svelte
ui/src/routes/classify/: +page.svelte
ui/src/routes/cluster/new/: +page.svelte
ui/src/routes/clusters/: +page.svelte
ui/src/routes/clusters/[id]/: +page.svelte
ui/src/routes/clusters/[id]/label/: +page.svelte
ui/src/routes/compare/: +page.svelte
ui/src/routes/export/: +page.svelte
ui/src/routes/settings/: +page.svelte
